@@ -73,7 +73,10 @@ has_kbd_backlight(void)
 	  || (mops->type == MACHINE_MACBOOKPRO_2)
 	  || (mops->type == MACHINE_MACBOOKPRO_3)
 	  || (mops->type == MACHINE_MACBOOKPRO_4)
-	  || (mops->type == MACHINE_MACBOOKAIR_1));
+	  || (mops->type == MACHINE_MACBOOKPRO_5)
+	  || (mops->type == MACHINE_MACBOOK_5)
+	  || (mops->type == MACHINE_MACBOOKAIR_1)
+	  || (mops->type == MACHINE_MACBOOKAIR_2));
 }
 #endif /* __powerpc__ */
 
