@@ -10,6 +10,8 @@ version 1.22:
 	Nobuhiro Iwamatsu <iwamatsu@nigauri.org>.
 	- pommed: use a common sysfs power class routine in power.c, add
 	sysfs power class support for pmac machines.
+	- pommed: added partial support for the October 2008 laptops
+	(MacBook5,1, MacBookPro5,1, MacBookAir2,1), LCD backlight missing.
 
 version 1.21:
 	- gpomme: use compositing if available, patch by Soeren Sonnenburg.
